# smol-poet

./: .gitignore  README.md  bpe.py  generate.py  gqa_kv.py  load_poems.py  model.py  pretokenize.py  pyproject.toml  rl_train.py  rope.py  swi_glu.py  test.py
config/: config.yaml
ppo/: ppo_loop.py  ppo_reward.py
visualization/: vis_embed_space.py  visualize_attention.py
